--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,8 +1,9 @@
 ﻿name: CI/CD Pipeline
 
 on:
-  push:
-    branches: [ main ]
+  # DISABLED - Using main-dockerhub.yml instead
+  # push:
+  #   branches: [ main ]
   workflow_dispatch: {}
 
 jobs:
