--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,63 +1,42 @@
-name: CI/CD Pipeline
+name: CI/CD Pipeline - SafeBoda API
 
 on:
   push:
     branches:
       - main
-  workflow_dispatch: # Allows manual triggering
-
-env:
-  AZURE_WEBAPP_NAME: safeboda-api
-  AZURE_RESOURCE_GROUP: safeboda-rg
-  DOCKER_IMAGE_NAME: safeboda-api
-  DOTNET_VERSION: '8.0.x'
 
 jobs:
-  build-and-test:
+  build-and-push:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+
 
       - name: Setup .NET
         uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: ${{ env.DOTNET_VERSION }}
+          dotnet-version: '5.0.x'
+
 
       - name: Restore dependencies
-        run: dotnet restore SafeBoda.Api/SafeBoda.Api.csproj
+        run: dotnet restore
 
-      - name: Build
-        run: dotnet build SafeBoda.Api/SafeBoda.Api.csproj --no-restore -c Release
+      - name: Build project
+        run: dotnet build --configuration Release --no-restore
 
-      - name: Test
-        run: |
-          if [ -f "SafeBoda.Api.Tests/SafeBoda.Api.Tests.csproj" ]; then
-            dotnet test SafeBoda.Api.Tests/SafeBoda.Api.Tests.csproj --no-build --verbosity normal
-          else
-            echo "Test project not found, skipping tests"
-          fi
-        continue-on-error: true
 
-  build-and-push-docker:
-    runs-on: ubuntu-latest
-    needs: build-and-test
-    if: github.ref == 'refs/heads/main'
+      - name: Run tests
+        run: dotnet test --no-build --verbosity normal
 
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Log in to Azure Container Registry
+      - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
         with:
-          registry: ${{ secrets.AZURE_REGISTRY_LOGIN_SERVER }}
-          username: ${{ secrets.AZURE_REGISTRY_USERNAME }}
-          password: ${{ secrets.AZURE_REGISTRY_PASSWORD }}
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
@@ -66,27 +45,5 @@ jobs:
           file: ./SafeBoda.Api/Dockerfile
           push: true
           tags: |
-            ${{ secrets.AZURE_REGISTRY_LOGIN_SERVER }}/pelino-courses/${{ env.DOCKER_IMAGE_NAME }}:latest
-            ${{ secrets.AZURE_REGISTRY_LOGIN_SERVER }}/pelino-courses/${{ env.DOCKER_IMAGE_NAME }}:${{ github.sha }}
-
-  deploy-to-azure:
-    runs-on: ubuntu-latest
-    needs: build-and-push-docker
-    if: github.ref == 'refs/heads/main'
-    environment:
-      name: 'Production'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-
-    steps:
-      - name: Azure Login
-        uses: azure/login@v2
-        with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
-
-      - name: Deploy to Azure App Service
-        id: deploy-to-webapp
-        uses: azure/webapps-deploy@v3
-        with:
-          app-name: ${{ env.AZURE_WEBAPP_NAME }}
-          resource-group: ${{ env.AZURE_RESOURCE_GROUP }}
-          images: ${{ secrets.AZURE_REGISTRY_LOGIN_SERVER }}/pelino-courses/${{ env.DOCKER_IMAGE_NAME }}:latest
+            ghcr.io/pelino-courses/module-7-safeboda-containerize-and-deploy-the-api-nadine16uwitonze/safeboda-api:latest
+            ghcr.io/pelino-courses/module-7-safeboda-containerize-and-deploy-the-api-nadine16uwitonze/safeboda-api:${{ github.sha }}
