--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,34 +5,39 @@ on:
     branches:
       - main
 
+
+permissions:
+  contents: read
+  packages: write
+
 jobs:
-  build-and-push-docker:
+  build-and-push:
     runs-on: ubuntu-latest
 
     steps:
-      # 1. Checkout source code
+      # 1️⃣ Checkout repository code
       - name: Checkout code
         uses: actions/checkout@v4
 
-      # 2. Setup .NET 9
+
       - name: Setup .NET
         uses: actions/setup-dotnet@v4
         with:
           dotnet-version: '9.0.x'
 
-      # 3. Restore dependencies
+
       - name: Restore dependencies
         run: dotnet restore
 
-      # 4. Build solution
+
       - name: Build project
         run: dotnet build --configuration Release
 
-      # 5. Run tests
+
       - name: Run tests
         run: dotnet test --configuration Release --verbosity normal
 
-      # 6. Login to GitHub Container Registry (GHCR)
+
       - name: Login to GHCR
         uses: docker/login-action@v3
         with:
@@ -40,7 +45,7 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      # 7. Build and push Docker image (LOWERCASE FIX)
+
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
